maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: not found: value marqueCasen
    marqueCasen(x - 1, y, poids + 1)
    ^